--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -1,6 +1,7 @@
 .contacts {
     flex: 0.2;
     padding: 0 20px;
+    overflow: scroll;
 }
 
 .contacts > h2 {
